// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/Fuda default 1`] = `
<div
  className="makeStyles-root-81 makeStyles-root-89"
>
  <div
    className="makeStyles-inner-82"
  >
    <span
      className="makeStyles-root-98 makeStyles-root-99 makeStyles-root-96 makeStyles-root-97 makeStyles-firstPhrase-83"
    >
      秋の田の
    </span>
    <span
      className="makeStyles-root-98 makeStyles-root-101 makeStyles-root-96 makeStyles-root-100 makeStyles-secondPhrase-84 makeStyles-secondPhrase-90"
    >
      かりほの庵の
    </span>
    <span
      className="makeStyles-root-98 makeStyles-root-103 makeStyles-root-96 makeStyles-root-102 makeStyles-thirdPhrase-85 makeStyles-thirdPhrase-91"
    >
      苫をあらみ
    </span>
    <span
      className="makeStyles-root-98 makeStyles-root-105 makeStyles-root-96 makeStyles-root-104 makeStyles-fourthPhrase-86 makeStyles-fourthPhrase-92"
    >
      わが衣手は
    </span>
    <span
      className="makeStyles-root-98 makeStyles-root-107 makeStyles-root-96 makeStyles-root-106 makeStyles-fifthPhrase-87 makeStyles-fifthPhrase-93"
    >
      露にぬれつつ
    </span>
    <span
      className="makeStyles-root-98 makeStyles-root-109 makeStyles-root-96 makeStyles-root-108 makeStyles-creator-88 makeStyles-creator-94"
    >
      天智天皇
    </span>
  </div>
</div>
`;

exports[`Storyshots molecules/Fuda with size l 1`] = `
<div
  className="makeStyles-root-168 makeStyles-root-176"
>
  <div
    className="makeStyles-inner-169"
  >
    <span
      className="makeStyles-root-185 makeStyles-root-186 makeStyles-root-183 makeStyles-root-184 makeStyles-firstPhrase-170"
    >
      秋の田の
    </span>
    <span
      className="makeStyles-root-185 makeStyles-root-188 makeStyles-root-183 makeStyles-root-187 makeStyles-secondPhrase-171 makeStyles-secondPhrase-177"
    >
      かりほの庵の
    </span>
    <span
      className="makeStyles-root-185 makeStyles-root-190 makeStyles-root-183 makeStyles-root-189 makeStyles-thirdPhrase-172 makeStyles-thirdPhrase-178"
    >
      苫をあらみ
    </span>
    <span
      className="makeStyles-root-185 makeStyles-root-192 makeStyles-root-183 makeStyles-root-191 makeStyles-fourthPhrase-173 makeStyles-fourthPhrase-179"
    >
      わが衣手は
    </span>
    <span
      className="makeStyles-root-185 makeStyles-root-194 makeStyles-root-183 makeStyles-root-193 makeStyles-fifthPhrase-174 makeStyles-fifthPhrase-180"
    >
      露にぬれつつ
    </span>
    <span
      className="makeStyles-root-185 makeStyles-root-196 makeStyles-root-183 makeStyles-root-195 makeStyles-creator-175 makeStyles-creator-181"
    >
      天智天皇
    </span>
  </div>
</div>
`;

exports[`Storyshots molecules/Fuda with size m 1`] = `
<div
  className="makeStyles-root-139 makeStyles-root-147"
>
  <div
    className="makeStyles-inner-140"
  >
    <span
      className="makeStyles-root-156 makeStyles-root-157 makeStyles-root-154 makeStyles-root-155 makeStyles-firstPhrase-141"
    >
      秋の田の
    </span>
    <span
      className="makeStyles-root-156 makeStyles-root-159 makeStyles-root-154 makeStyles-root-158 makeStyles-secondPhrase-142 makeStyles-secondPhrase-148"
    >
      かりほの庵の
    </span>
    <span
      className="makeStyles-root-156 makeStyles-root-161 makeStyles-root-154 makeStyles-root-160 makeStyles-thirdPhrase-143 makeStyles-thirdPhrase-149"
    >
      苫をあらみ
    </span>
    <span
      className="makeStyles-root-156 makeStyles-root-163 makeStyles-root-154 makeStyles-root-162 makeStyles-fourthPhrase-144 makeStyles-fourthPhrase-150"
    >
      わが衣手は
    </span>
    <span
      className="makeStyles-root-156 makeStyles-root-165 makeStyles-root-154 makeStyles-root-164 makeStyles-fifthPhrase-145 makeStyles-fifthPhrase-151"
    >
      露にぬれつつ
    </span>
    <span
      className="makeStyles-root-156 makeStyles-root-167 makeStyles-root-154 makeStyles-root-166 makeStyles-creator-146 makeStyles-creator-152"
    >
      天智天皇
    </span>
  </div>
</div>
`;

exports[`Storyshots molecules/Fuda with size s 1`] = `
<div
  className="makeStyles-root-110 makeStyles-root-118"
>
  <div
    className="makeStyles-inner-111"
  >
    <span
      className="makeStyles-root-127 makeStyles-root-128 makeStyles-root-125 makeStyles-root-126 makeStyles-firstPhrase-112"
    >
      秋の田の
    </span>
    <span
      className="makeStyles-root-127 makeStyles-root-130 makeStyles-root-125 makeStyles-root-129 makeStyles-secondPhrase-113 makeStyles-secondPhrase-119"
    >
      かりほの庵の
    </span>
    <span
      className="makeStyles-root-127 makeStyles-root-132 makeStyles-root-125 makeStyles-root-131 makeStyles-thirdPhrase-114 makeStyles-thirdPhrase-120"
    >
      苫をあらみ
    </span>
    <span
      className="makeStyles-root-127 makeStyles-root-134 makeStyles-root-125 makeStyles-root-133 makeStyles-fourthPhrase-115 makeStyles-fourthPhrase-121"
    >
      わが衣手は
    </span>
    <span
      className="makeStyles-root-127 makeStyles-root-136 makeStyles-root-125 makeStyles-root-135 makeStyles-fifthPhrase-116 makeStyles-fifthPhrase-122"
    >
      露にぬれつつ
    </span>
    <span
      className="makeStyles-root-127 makeStyles-root-138 makeStyles-root-125 makeStyles-root-137 makeStyles-creator-117 makeStyles-creator-123"
    >
      天智天皇
    </span>
  </div>
</div>
`;
